# PROJECT-WORK

./: README.md  What_is_Finance_Finance.docx
Crawler/: crawler.py
Crawler/crawled_data/: crawled_content.json  economictimes.indiatimes.com_stocks_marketstats_most-active-value.txt  economictimes.indiatimes.com_stocks_marketstats_top-losers.txt  economictimes_indiatimes_com_markets.json  economictimes_indiatimes_com_markets_candlestick-screener.json  economictimes_indiatimes_com_markets_ipo.json  economictimes_indiatimes_com_markets_stocks.json  (+4 more)
Experiement_code/: Dockerfile  expt.py  requirements.txt  untitled1(1).py
Experiement_code/exptdata/: lol.md
PROJECT/: docker-compose.yaml
PROJECT/backend/: .env  Dockerfile  app.py  crawler.py  deep_search.py  main.py  pyproject.toml  requirements.txt  server.py  tempCodeRunnerFile.py  tools.py
PROJECT/backend/crawled_data/: Banking.txt  BaseLine_Info.txt  Budgeting.txt  Cash_Flow.txt  Credit_Score.txt  Crypto_Currency.txt  Currency_Exchange.txt  Financial_Planning.txt  Insurance.txt  Investment.txt  Invoices.txt  Market_Top_Gainers.txt  Market_Top_Losers.txt  Market_Trends.txt  Real_Estate.txt  Retirement.txt  Savings_plan.txt  Stock_Markets.txt  Stocks_Market_News.txt  Taxation.txt  Wealth_Management.txt  economictimes.indiatimes.com_stocks_marketstats_top-gainers.txt  edition.cnn.com_markets.txt  markets.ft.com_data.txt
chatbot/: Add New Faculty.html  Add New Subjects.html  Add Questions.html  Chatbot_cohere_new.json  Controller Menu.html  Controller Menu2.html  README.md  Smart School MIS.html
(+46 files in other folders)
