[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "crawl4ai>=0.6.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.2",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "serpapi>=0.1.5",
    "spacy>=3.8.7",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.61",
]
